--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
-    "name": "greatwar",
-    "slug": "greatwar",
+    "name": "war-weather",
+    "slug": "war-weather",
+    "privacy": "public",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/weathericon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/weathericon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
